--- a/.env.txt
+++ b/.env.txt
@@ -1,5 +1,5 @@
-export FLASK_APP=run.py
-export FLASK_DEBUG=1
+FLASK_APP=run.py
+FLASK_DEBUG=1
 
-export OA_USER="companyID\userID"
-export OA_PASS="password"
+OA_USER="companyID\userID"
+OA_PASS="password"
